--- a/family.html
+++ b/family.html
@@ -3,19 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" href="imgs/favicon.ico">
+	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
-</head>
 <body>
-About
-Family
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">About</a></li>
+				<li><a href="family.html">Family</a></li>
+			</ul>
+		</nav>
 <h1>Family</h1>
-
+</header>
 
 <main>
 <p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
 <img src = "wisconsin_dells.jpg" width="25"/>
 <img src = "badlands.jpg" width="1000"/>
-<img "falling.jpg" width="25"/>
+<img scr = "falling.jpg" width="25"/>
 <img src = "jewel_cave.jpg" width="1000"/>
 </main>
 
