--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 	
 <header>
 	<nav>
-		<ol>
-		About
-		Family
-		</ol>
+		<ul>
+			<li><a href="index.html">About</a></li>
+			<li><a href="family.html">Family</a></li>
+		</ul>
 	</nav>
+<h1>Colleen van Lent</h1>
 </header>
+<main>
 
-Colleen van Lent
+<p>I am a Lecturer IV in the School of Information at the University of Michigan. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
 
-I am a Lecturer IV in the School of Information at the University of Michigan. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).
-
-My previous jobs include Associate Professor at California State University and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from Kent State University Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.
-
+<p>My previous jobs include Associate Professor at California State University and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from Kent State University Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.</p>
+</main>
 <footer>
-Colleen van Lent copy 2020
+Colleen van Lent copy; 2020
 </footer>
 </body>
 </html>
