--- a/family.html
+++ b/family.html
@@ -18,10 +18,10 @@
 
 <main>
 <p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
-<img src = "wisconsin_dells.jpg" width="25"/>
-<img src = "badlands.jpg" width="1000"/>
-<img scr = "falling.jpg" width="25"/>
-<img src = "jewel_cave.jpg" width="1000"/>
+<img src = "imgs/wisconsin_dells.jpg" alt="Wisconsin Dells" width="25"/>
+<img src = "imgs/badlands.jpg" alt="Badlands" width="1000"/>
+<img scr = "imgs/falling.jpg" alt="Falling down a rock" width="25"/>
+<img src = "imgs/jewel_cave.jpg" alt="Jewel Cave" width="1000"/>
 </main>
 
 Colleen van Lent copy; 2020
