--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="family.html">Family</a></li>
 		</ul>
 	</nav>
-<h1>Colleen van Lent</h1>
+<title>Colleen van Lent</title>
 </header>
 <main>
 
