--- a/family.html
+++ b/family.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<title>Family</title>
 	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -13,7 +14,7 @@
 				<li><a href="family.html">Family</a></li>
 			</ul>
 		</nav>
-<title>Family</title>
+<h1>Family</h1>
 </header>
 
 <main>
@@ -23,7 +24,8 @@
 <img scr = "imgs/falling.jpg" alt="Falling down a rock" width="25"/>
 <img src = "imgs/jewel_cave.jpg" alt="Jewel Cave" width="1000"/>
 </main>
-
-Colleen van Lent copy; 2020
+<footer>
+	Colleen van Lent © 2020
+</footer>
 </body>
 </html>
