--- a/family.html
+++ b/family.html
@@ -6,6 +6,7 @@
 	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 	<header>
 		<nav>
@@ -18,14 +19,14 @@
 </header>
 
 <main>
-<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
+<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 <img src = "imgs/wisconsin_dells.jpg" alt="Wisconsin Dells" width="25"/>
 <img src = "imgs/badlands.jpg" alt="Badlands" width="1000"/>
 <img scr = "imgs/falling.jpg" alt="Falling down a rock" width="25"/>
 <img src = "imgs/jewel_cave.jpg" alt="Jewel Cave" width="1000"/>
 </main>
 <footer>
-	Colleen van Lent © 2020
+	Colleen van Lent  &#169; 2020
 </footer>
 </body>
 </html>
