--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>About</title>
 	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -25,7 +25,7 @@
 <p>My previous jobs include Associate Professor at <a href="https://www2.calstate.edu"> California State University</a> and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from <a href="https://www.kent.edu"> Kent State University</a> Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.</p>
 </main>
 <footer>
-Colleen van Lent © 2020
+Colleen van Lent &#169; 2020
 </footer>
 </body>
 </html>
