--- a/family.html
+++ b/family.html
@@ -23,7 +23,7 @@
 <p> We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 <img src = "imgs/wisconsin_dells.jpg" alt="Wisconsin Dells" width="25"/>
 <img src = "imgs/badlands.jpg" alt="Badlands" width="1000"/>
-<img scr = "imgs/falling.jpg" alt="Falling down a rock" width="25"/>
+<img src = "imgs/falling.jpg" alt="Falling down a rock" width="25"/>
 <img src = "imgs/jewel_cave.jpg" alt="Jewel Cave" width="1000"/>
 </main>
 <footer>
