--- a/family.html
+++ b/family.html
@@ -2,32 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Family</title>
 	<link rel="icon" href="imgs/favicon.ico">
-	<link rel="stylesheet" href="css/html5reset.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="index.html">About</a></li>
-				<li><a href="family.html">Family</a></li>
-			</ul>
-		</nav>
+About
+Family
 <h1>Family</h1>
-</header>
+
 
 <main>
-<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states. </p> 
-<p> We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
-<img src = "imgs/wisconsin_dells.jpg" alt="Wisconsin Dells" width="25"/>
-<img src = "imgs/badlands.jpg" alt="Badlands" width="1000"/>
-<img src = "imgs/falling.jpg" alt="Falling down a rock" width="25"/>
-<img src = "imgs/jewel_cave.jpg" alt="Jewel Cave" width="1000"/>
+<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
+<img src = "wisconsin_dells.jpg" width="25"/>
+<img src = "badlands.jpg" width="1000"/>
+<img "falling.jpg" width="25"/>
+<img src = "jewel_cave.jpg" width="1000"/>
 </main>
-<footer>
-	Colleen van Lent  &#169; 2020
-</footer>
+
+Colleen van Lent copy; 2020
 </body>
 </html>
